[Bugfix] Fix character too long

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -88,6 +88,8 @@ body {
   width: fit-content;
 
   word-wrap: break-word;
+  overflow-wrap: break-word;
+  word-break: break-word;
   background-color: white;
 }
 
@@ -113,6 +115,9 @@ body {
   align-items: flex-start;
   text-align: start;
   color: black;
+  word-break: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
 }
 
 .conversation-input {
